# fracada

./: .gitignore  LICENSE  README.md  cabal.project  cabal.project.local  fracada.cabal  shell.nix
benchmark/: Bench.hs  README.md
benchmark/common/Fracada/: Benchmark.hs
benchmark/common/Fracada/Benchmark/: Common.hs  NaturalSort.hs
examples/: README.md
examples/nft/: metadata.json  mint_logo_nft.sh  policy.script
examples/nft/keys/: policy.skey  policy.vkey
exe/: Emulator.hs  datum-dump.hs  script-dump.hs
scripts/: Main.hs  protocol-parameters.json
src/: Fracada.hs
test/: Spec.hs
test/Spec/: Fracada.hs
