Cabal-Version:      3.4
Name:               fracada
Version:            0.1.0.0
Author:              dcSpark
Maintainer:          github@dcspark.io
Build-Type:          Simple
Copyright:           © 2021 dcSpark
License:             NONE
License-files:       LICENSE


library
  hs-source-dirs:      src
  exposed-modules:     Fracada
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , containers
                     , freer-extras
                     , plutus-core
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx
                     , plutus-tx-plugin
                     , text
                     , playground-common
                     , cardano-api
  default-language:   Haskell2010
  default-extensions: DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      ExplicitForAll
                      FunctionalDependencies
                      GADTs
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      PolyKinds
                      KindSignatures
                      StandaloneDeriving
                      TemplateHaskell
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      StandaloneKindSignatures
  ghc-options:        -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise


executable           Emulator
  main-is:           Emulator.hs
  hs-source-dirs:    exe, src, test
  other-modules:     Fracada, Spec.Fracada
  build-depends:     base
                    , aeson
                    , cardano-api
                    , cardano-ledger-alonzo
                    , bytestring
                    , containers
                    , freer-extras
                    , plutus-core
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-tx
                    , plutus-tx-plugin
                    , tasty-hunit
                    , text
                    , playground-common
                    , lens
                    , data-default
                    , tasty
  default-language:   Haskell2010
  default-extensions: DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      ExplicitForAll
                      FunctionalDependencies
                      GADTs
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      PolyKinds
                      KindSignatures
                      StandaloneDeriving
                      TemplateHaskell
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      StandaloneKindSignatures
  ghc-options:        -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable           script-dump
  main-is:           script-dump.hs
  hs-source-dirs:    exe, src
  other-modules:     Fracada
  build-depends:     base
                    , aeson
                    , cardano-api
                    , cardano-ledger-alonzo
                    , bytestring
                    , containers
                    , freer-extras
                    , plutus-core
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-tx
                    , plutus-tx-plugin
                    , text
                    , serialise
                    , playground-common
  default-language:   Haskell2010
  default-extensions: DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      ExplicitForAll
                      FunctionalDependencies
                      GADTs
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      PolyKinds
                      KindSignatures
                      StandaloneDeriving
                      TemplateHaskell
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      StandaloneKindSignatures
  ghc-options:        -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable           datum-dump
  main-is:           datum-dump.hs
  hs-source-dirs:    exe, src
  other-modules:     Fracada
  build-depends:     base
                    , aeson
                    , cardano-api
                    , cardano-ledger-alonzo
                    , bytestring
                    , containers
                    , freer-extras
                    , plutus-core
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-tx
                    , plutus-tx-plugin
                    , text
                    , serialise
                    , playground-common
                    , cardano-api
                    , hex
                    , base16-bytestring
  default-language:   Haskell2010
  default-extensions: DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      ExplicitForAll
                      FunctionalDependencies
                      GADTs
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      PolyKinds
                      KindSignatures
                      StandaloneDeriving
                      TemplateHaskell
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      StandaloneKindSignatures
  ghc-options:        -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable           fracada-scripts
  main-is:           Main.hs
  hs-source-dirs:    scripts, test

  other-modules:     Spec.Fracada
  ghc-options:       -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns -Wincomplete-record-updates -Wredundant-constraints -Widentities -rtsopts -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:     base
                    , cardano-api
                    , fracada
                    , optparse-applicative
                    , plutus-tx
                    , plutus-contract
                    , plutus-ledger
                    , base
                    , bytestring
                    , cardano-crypto-class
                    , containers
                    , data-default
                    , freer-extras
                    , prettyprinter
                    , tasty
                    , tasty-hunit
                    , tasty-hedgehog
                    , tasty-golden
                    , tasty-quickcheck
                    , text
                    , lens
                    , mtl
                    , QuickCheck
                    , freer-simple
                    , foldl
                    , streaming
  default-language:   Haskell2010
  default-extensions: DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      ExplicitForAll
                      FunctionalDependencies
                      GADTs
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      PolyKinds
                      KindSignatures
                      StandaloneDeriving
                      TemplateHaskell
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      StandaloneKindSignatures

test-suite          fracada-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test, exe
  other-modules:    Spec.Fracada
  default-language: Haskell2010
  ghc-options:      -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns -Wincomplete-record-updates -Wredundant-constraints -Widentities -rtsopts -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:    base
                  , fracada
                  , plutus-tx
                  , plutus-contract
                  , plutus-ledger
                  , bytestring
                  , cardano-crypto-class
                  , containers
                  , data-default
                  , freer-extras
                  , prettyprinter
                  , tasty
                  , tasty-hunit
                  , tasty-hedgehog
                  , tasty-golden
                  , tasty-quickcheck
                  , text
                  , lens
                  , mtl
                  , QuickCheck
                  , freer-simple
                  , foldl
                  , streaming

-- Benchmark related stanzas

data-files:
                    benchmark/common/templates/*.tpl
                    benchmark/data/*.flat

benchmark           validation
  default-language: Haskell2010
  ghc-options:      -fno-specialise
                    -fno-spec-constr
                    -fno-ignore-interface-pragmas
                    -fno-omit-interface-pragmas
                    -Wall -Wnoncanonical-monad-instances -Wunused-packages
                    -Wincomplete-uni-patterns -Wincomplete-record-updates
                    -Wredundant-constraints -Widentities
                    -Wnoncanonical-monoid-instances
  type:             exitcode-stdio-1.0
  main-is:          Bench.hs
  hs-source-dirs:   benchmark
                    , benchmark/common
  other-modules:    Fracada.Benchmark
                    , Fracada.Benchmark.Common
                    , Fracada.Benchmark.NaturalSort
                    , Paths_fracada
  build-depends:    base >=4.7 && <5
                    , bytestring
                    , deepseq
                    , directory
                    , criterion
                    , filepath
                    , flat
                    , optparse-applicative
                    , plutus-core
                    , plutus-tx
                    , transformers
